--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><title>React App</title><script defer="defer" src="/kanal-servise-test-task/static/js/main.cdda16bd.js"></script><link href="/kanal-servise-test-task/static/css/main.afab094a.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><title>React App</title><script defer="defer" src="/static/js/main.8911c7a6.js"></script><link href="/static/css/main.a6a31240.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
